# staking-contract-nft-pnft-cnft

./: README.md
backend/: .env.example  .env.production  (+4 more)
rewards-center/programs/solana-nft-programs-rewards-center/: Cargo.toml
rewards-center/programs/solana-nft-programs-rewards-center/src/: errors.rs  lib.rs  utils.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/authorization/: authorize_mint.rs  deauthorize_mint.rs  mod.rs  state.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/payment/: close_payment_info.rs  init_payment_info.rs  mod.rs  state.rs  update_payment_info.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/reward_distribution/: mod.rs  state.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/reward_distribution/reward_distributor/: close_reward_distributor.rs  init_reward_distributor.rs  mod.rs  reclaim_funds.rs  update_reward_distributor.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/reward_receipts/: mod.rs  state.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/stake_booster/: boost_stake_entry.rs  close_stake_booster.rs  init_stake_booster.rs  mod.rs  state.rs  update_stake_booster.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/stake_entry/: close_stake_entry.rs  init_entry.rs  mod.rs  reset_stake_entry.rs  resize_stake_entry.rs  state.rs  update_total_stake_seconds.rs
rewards-center/programs/solana-nft-programs-rewards-center/src/stake_pool/: close_stake_pool.rs  init_pool.rs  mod.rs  state.rs  update_pool.rs
(+193 files in other folders)
